# liboffkv-rust

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
src/: client.rs  ffi.rs  lib.rs  main.rs  result.rs
src/client/: client.rs  ffi.rs  mod.rs
src/result/: mod.rs
src/txn/: mod.rs
travis/: bootstrap_consul.sh
