[package]
name = "rsoffkv"
version = "0.1.4"
authors = ["Dmitriy <dimak24.05@mail.ru>"]
edition = "2018"
description = "A uniform interface for 3 different distributed key-value storages: Zookeeper, Consul, ETCD"
repository = "https://github.com/offscale/rsoffkv"
license = "Apache-2.0 OR MIT"


[badges]
travis-ci = { repository = "https://github.com/offscale/rsoffkv" }
maintenance = { status = "actively-developed" }
codecov = { repository = "https://github.com/offscale/rsoffkv" }


[dependencies]
libc = "0.2"


[build-dependencies]
cmake = "0.1"
